--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Will Schneider — Data Science Portfolio"
 description: "Portfolio of projects in predictive modeling, analytics, and machine learning"
-theme: jekyll-theme-minimal
+theme: jekyll-theme-primer
 logo: 
 show_downloads: false
 google_analytics: 
